--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,12 +1,19 @@
 name: deploy-container
 
+# on:
+#   push:
+#     branches:
+#       - master
+#       - main
+#     paths:
+#       - 'packages/container/**'
 on:
   push:
     branches:
-      - master
-      - main
+    - master
+    - release/*
     paths:
-      - 'packages/container/**'
+     - 'packages/container/**'
 
 defaults:
   run:
